Fix hover overflow error

--- a/Website/static/css/main.css
+++ b/Website/static/css/main.css
@@ -231,6 +231,10 @@
     opacity: 1;
   }
 
+  .tooltiptext.offset-right {
+    margin-left: -40px;
+  }
+
   /* Cookie banner */
   .cookie-notice {
     display: none;
